# amazon-freertos

./: .gitignore  CMakeLists.txt  crossconfig.cmake
CMake/: FreeRTOSConfig.cmake  FreeRTOSConfig.h.in  FreeRTOSConfigDependencies.cmake  FreeRTOSExternProvided.h.in  FreeRTOS_uc.h.in  MicroprocessorSpecific.cmake  config.h.in
include/: FreeRTOS.h
include/FreeRTOS/: CMakeLists.txt  RTOSConfig.h  common.h  event_groups.h  message_buffer.h  mpu_wrappers.h  port.h  projdefs.h  queue.h  semphr.h  stream_buffer.h  task.h  timers.h
include/internal/: queue_internal.h  task_internal.h
include/private/: common_private.h  event_groups_private.h  heap.h  list.h  port.h  portable.h  queue_private.h  stack_macros.h  stream_buffer_private.h  task_private.h  timers_private.h
lib/FreeRTOS/portable/GCC/ATMega323/: portmacro.h
lib/FreeRTOS/portable/GCC/AVR/: avr4_interrupt.h  avr4_timer.h  port.c  setup_interrupt.c  setup_interrupt.h  setup_timer.h
lib/FreeRTOS/portable/GCC/Atmel-AVR/: avr4_timer.h  port.c
lib/include/: FreeRTOS.h  RTOSConfig.h  event_groups_private.h  queue.h  stream_buffer.h  stream_buffer_private.h  task_internal.h  timers.h
lib/include/private/: portable.h  projdefs.h
port/atmega88/: CMakeLists.txt
port/atmega88/include/: CMakeLists.txt
port/atmega88/include/FreeRTOS/: CMakeLists.txt  isr.h  port_specific.h  portmacro.h
port/atmega88/source/: CMakeLists.txt  port.c
source/: CMakeLists.txt  event_groups.c  list.c  queue.c  tasks.c  timers.c
source/controller_specific/: readme.txt
source/controller_specific/Atmel-AVR/: context_macros.h  portmacro.h  setup_timer.h
source/heap/: CMakeLists.txt  heap_1.c  heap_2.c  heap_3.c  heap_4.c  heap_5.c
